syntax = "proto3";

import "witness.proto";

package types;
option go_package = "../types";

message AccountTokenBalanceReceipt {
    uint64 accountId      = 1; //accountId其实就是叶子的totalIndex
    string ethAddress     = 2; //账户对应的以太坊地址
    string chain33Addr    = 3; //chain33地址
    uint64 tokenId        = 4; //叶子下拥有的tokenId
    string balanceBefore  = 5;
    string balanceAfter   = 6;
}

message TransferReceipt4l2 {
    AccountTokenBalanceReceipt from = 1;
    AccountTokenBalanceReceipt to   = 2;
}

message SetPubKeyReceipt {
    uint64 accountId = 1;
    ZkPubKey  pubKey = 2;
    uint64    pubKeyTy = 3;
}